--- a/package.json
+++ b/package.json
@@ -8,19 +8,27 @@
         "analyze": "webpack-bundle-analyzer \"./build/stats.json\"",
         "serve": "serve \"./build\" -s"
     },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
     "dependencies": {
-        "@babel/core": "7.2.2",
-        "@babel/register": "7.0.0",
         "cross-env": "5.2.0",
         "i18next": "^19.1.0",
         "i18next-browser-languagedetector": "^4.0.1",
-        "lodash-es": "4.17.14",
         "react": "16.12.0",
         "react-dom": "16.8.1",
         "react-i18next": "^11.3.2",
         "react-loadable": "5.5.0",
         "react-masonry-component": "^6.2.1",
-        "react-masonry-css": "^1.0.14",
         "react-redux": "^7.1.3",
         "react-responsive-carousel": "^3.1.51",
         "react-router-dom": "5.1.2",
@@ -30,24 +38,43 @@
         "redux": "^4.0.5",
         "redux-logger": "^3.0.6",
         "redux-saga": "^1.1.3",
-        "reselect": "^4.0.0",
         "store": "^2.0.12",
         "styled-components": "^5.0.0",
         "styled-reset": "^4.1.0",
         "webpack-merge": "^4.2.2"
     },
     "devDependencies": {
+        "@babel/core": "^7.8.7",
         "@babel/plugin-proposal-class-properties": "7.3.0",
         "@babel/plugin-syntax-async-generators": "7.2.0",
         "@babel/plugin-syntax-dynamic-import": "7.2.0",
-        "@babel/polyfill": "7.2.5",
-        "@babel/preset-env": "7.3.1",
+        "@babel/plugin-transform-runtime": "^7.8.3",
+        "@babel/polyfill": "^7.2.5",
+        "@babel/preset-env": "^7.3.1",
         "@babel/preset-react": "7.0.0",
+        "@babel/preset-typescript": "^7.8.3",
+        "@babel/register": "^7.8.6",
+        "@babel/runtime": "^7.8.7",
         "@lectrum/eslint-config-core": "1.1.15",
+        "@redux-saga/core": "^1.1.3",
         "@svgr/webpack": "4.1.0",
+        "@types/node": "^13.9.1",
+        "@types/react": "^16.9.23",
+        "@types/react-dom": "^16.9.5",
+        "@types/react-loadable": "^5.5.3",
+        "@types/react-redux": "^7.1.7",
+        "@types/react-router-dom": "^5.1.3",
+        "@types/react-router-redux": "^5.0.18",
+        "@types/redux-logger": "^3.0.7",
+        "@types/store": "^2.0.2",
+        "@types/styled-components": "^5.0.1",
+        "@types/webpack-merge": "^4.1.5",
+        "@typescript-eslint/eslint-plugin": "^2.24.0",
+        "@typescript-eslint/parser": "^2.24.0",
         "app-root-path": "2.1.0",
+        "awesome-typescript-loader": "^5.2.1",
         "babel-eslint": "10.0.1",
-        "babel-loader": "8.0.5",
+        "babel-loader": "^8.0.5",
         "babel-plugin-dynamic-import-node": "2.2.0",
         "babel-plugin-styled-components": "^1.10.7",
         "clean-webpack-plugin": "1.0.1",
@@ -56,6 +83,10 @@
         "dotenv": "^8.2.0",
         "dotenv-webpack": "^1.7.0",
         "eslint": "5.13.0",
+        "eslint-plugin-babel": "^5.3.0",
+        "eslint-plugin-import": "^2.20.1",
+        "eslint-plugin-react": "^7.19.0",
+        "eslint-plugin-react-hooks": "^2.5.0",
         "file-loader": "3.0.1",
         "fontmin-webpack": "^2.0.6",
         "friendly-errors-webpack-plugin": "1.7.0",
@@ -71,9 +102,13 @@
         "raw-loader": "^4.0.0",
         "react-dev-utils": "7.0.3",
         "react-hot-loader": "4.6.5",
+        "redux-devtools-extension": "^2.13.8",
         "serve": "10.1.1",
         "source-map-loader": "^0.2.4",
         "style-loader": "0.23.1",
+        "ts-loader": "^6.2.1",
+        "typescript": "^3.8.3",
+        "typescript-plugin-styled-components": "^1.4.4",
         "webpack": "4.29.1",
         "webpack-bundle-analyzer": "3.3.2",
         "webpack-dev-server": "3.1.14",
