--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "store": "^2.0.12",
         "styled-components": "^5.0.0",
         "styled-reset": "^4.1.0",
+        "typesafe-actions": "^5.1.0",
         "webpack-merge": "^4.2.2"
     },
     "devDependencies": {
@@ -68,6 +69,7 @@
         "@types/redux-logger": "^3.0.7",
         "@types/store": "^2.0.2",
         "@types/styled-components": "^5.0.1",
+        "@types/webpack": "^4.41.8",
         "@types/webpack-merge": "^4.1.5",
         "@typescript-eslint/eslint-plugin": "^2.24.0",
         "@typescript-eslint/parser": "^2.24.0",
@@ -77,12 +79,14 @@
         "babel-loader": "^8.0.5",
         "babel-plugin-dynamic-import-node": "2.2.0",
         "babel-plugin-styled-components": "^1.10.7",
+        "browserslist": "^4.11.0",
         "clean-webpack-plugin": "1.0.1",
         "css-loader": "2.1.0",
         "detect-port-alt": "1.1.6",
         "dotenv": "^8.2.0",
         "dotenv-webpack": "^1.7.0",
         "eslint": "5.13.0",
+        "eslint-config-airbnb": "^18.1.0",
         "eslint-plugin-babel": "^5.3.0",
         "eslint-plugin-import": "^2.20.1",
         "eslint-plugin-react": "^7.19.0",
