--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "cross-env": "5.2.0",
         "i18next": "^19.1.0",
         "i18next-browser-languagedetector": "^4.0.1",
+        "lodash.merge": "^4.6.2",
         "react": "16.12.0",
         "react-dom": "16.8.1",
         "react-i18next": "^11.3.2",
@@ -40,9 +41,7 @@
         "redux-saga": "^1.1.3",
         "store": "^2.0.12",
         "styled-components": "^5.0.0",
-        "styled-reset": "^4.1.0",
-        "typesafe-actions": "^5.1.0",
-        "webpack-merge": "^4.2.2"
+        "styled-reset": "^4.1.0"
     },
     "devDependencies": {
         "@babel/core": "^7.8.7",
@@ -59,6 +58,7 @@
         "@lectrum/eslint-config-core": "1.1.15",
         "@redux-saga/core": "^1.1.3",
         "@svgr/webpack": "4.1.0",
+        "@types/lodash.merge": "^4.6.6",
         "@types/node": "^13.9.1",
         "@types/react": "^16.9.23",
         "@types/react-dom": "^16.9.5",
@@ -66,10 +66,12 @@
         "@types/react-redux": "^7.1.7",
         "@types/react-router-dom": "^5.1.3",
         "@types/react-router-redux": "^5.0.18",
+        "@types/react-tooltip": "^3.11.0",
         "@types/redux-logger": "^3.0.7",
         "@types/store": "^2.0.2",
         "@types/styled-components": "^5.0.1",
         "@types/webpack": "^4.41.8",
+        "@types/webpack-dev-server": "^3.10.1",
         "@types/webpack-merge": "^4.1.5",
         "@typescript-eslint/eslint-plugin": "^2.24.0",
         "@typescript-eslint/parser": "^2.24.0",
@@ -117,6 +119,7 @@
         "webpack-bundle-analyzer": "3.3.2",
         "webpack-dev-server": "3.1.14",
         "webpack-hot-middleware": "2.24.3",
+        "webpack-merge": "^4.2.2",
         "webpackbar": "3.1.5"
     }
 }
