--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -1,7 +1,6 @@
 root: true
 
 parser: '@typescript-eslint/parser'
-# parser: babel-eslint
 
 parserOptions:
     ecmaVersion: 2018
@@ -18,7 +17,15 @@ env:
     es6: true
 
 globals:
+    __ENV__: false
+    __DEV__: false
+    __STAGE__: false
+    __PROD__: false
+    __TEST__: false
+    __MODEL__: false
+    __: false
     React: false
+    shallow: false
     render: false
     mount: false
 
@@ -37,7 +44,26 @@ settings:
 rules:
     # hooks
     react-hooks/rules-of-hooks: 2
-    # react-hooks/exhaustive-deps: 1
+
+    # Jest
+    jest/consistent-test-it:
+        - 2
+        - fn: test
+    jest/lowercase-name: 2
+    jest/no-disabled-tests: 2
+    jest/no-focused-tests: 2
+    jest/no-identical-title: 2
+    jest/no-large-snapshots:
+        - 2
+        - maxSize: 10
+    jest/no-test-prefixes: 2
+    jest/no-jest-import: 2
+    jest/prefer-to-have-length: 2
+    jest/prefer-to-be-null: 2
+    jest/prefer-to-be-undefined: 2
+    jest/valid-describe: 2
+    jest/valid-expect: 2
+    jest/valid-expect-in-promise: 2
 
     # React core
     react/no-access-state-in-setstate: 2
@@ -79,7 +105,7 @@ rules:
                   - componentWillUnmount
                   - componentDiddCatch
 
-    # React JSX
+        # React JSX
     react/jsx-boolean-value: 2
     react/jsx-curly-spacing:
         - 2
@@ -124,7 +150,7 @@ rules:
           logical: ignore
           prop: ignore
 
-    # ESLint: possible errors
+        # ESLint: possible errors
     for-direction: 2
     getter-return:
         - 2
@@ -267,6 +293,11 @@ rules:
     no-process-exit: 2
     no-restricted-modules: 2
     no-sync: 0
+    object-curly-spacing:
+        - 2
+        - always
+        - arraysInObjects: false
+          objectsInObjects: false
     array-bracket-newline:
         - 2
         - multiline: true
@@ -320,10 +351,6 @@ rules:
         - cb
     id-length: 0
     implicit-arrow-linebreak: error
-    indent:
-        - 2
-        - 4
-        - SwitchCase: 1
     jsx-quotes:
         - 2
         - prefer-single
@@ -342,7 +369,7 @@ rules:
         - exceptAfterSingleLine: true
     max-depth: 0
     max-len:
-        - 0
+        - 2
         - 120
         - ignoreTemplateLiterals: true
           ignoreStrings: true
@@ -421,16 +448,23 @@ rules:
         - 2
         - never
 
-    # ECMAScript 6
+        # ECMAScript 6
     arrow-body-style: 0
     arrow-parens: [2, 'always']
 
-    # Babel
+        # Babel
     babel/no-invalid-this: 0
     babel/quotes:
         - 2
         - single
     babel/new-cap: 0
 
-    # TypeScript
+        # TypeScript
+    # "@typescript-eslint/no-unused-vars-experimental": 2
     "@typescript-eslint/no-unused-vars": 2
+    "@typescript-eslint/indent":
+        - 2
+        - 4
+        - SwitchCase: 1
+          MemberExpression: 1
+          ArrayExpression: 1
