--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "version": "1.0.0",
     "author": "Aleksander Konyk arziburst@gmail.com",
     "scripts": {
-        "start": "cross-env-shell NODE_ENV=development node --require @babel/register \"./scripts/webpack/start.js\"",
-        "build": "cross-env-shell NODE_ENV=production node --require @babel/register \"./scripts/webpack/build.js\"",
+        "start": "cross-env-shell NODE_ENV=development ts-node -P \"./tsconfig.webpack.json\" \"./scripts/webpack/start\"",
+        "build": "cross-env-shell NODE_ENV=production ts-node -P \"./tsconfig.webpack.json\" \"./scripts/webpack/build\"",
         "analyze": "webpack-bundle-analyzer \"./build/stats.json\"",
         "serve": "serve \"./build\" -s"
     },
@@ -44,23 +44,18 @@
         "styled-reset": "^4.1.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.8.7",
-        "@babel/plugin-proposal-class-properties": "7.3.0",
-        "@babel/plugin-syntax-async-generators": "7.2.0",
-        "@babel/plugin-syntax-dynamic-import": "7.2.0",
-        "@babel/plugin-transform-runtime": "^7.8.3",
-        "@babel/polyfill": "^7.2.5",
-        "@babel/preset-env": "^7.3.1",
-        "@babel/preset-react": "7.0.0",
-        "@babel/preset-typescript": "^7.8.3",
-        "@babel/register": "^7.8.6",
-        "@babel/runtime": "^7.8.7",
-        "@lectrum/eslint-config-core": "1.1.15",
         "@redux-saga/core": "^1.1.3",
-        "@svgr/webpack": "4.1.0",
+        "@types/app-root-path": "^1.2.4",
+        "@types/clean-webpack-plugin": "^0.1.3",
+        "@types/friendly-errors-webpack-plugin": "^0.1.2",
+        "@types/imagemin-mozjpeg": "^8.0.0",
+        "@types/imagemin-svgo": "^7.0.0",
+        "@types/lodash-webpack-plugin": "^0.11.3",
         "@types/lodash.merge": "^4.6.6",
+        "@types/mini-css-extract-plugin": "^0.9.1",
         "@types/node": "^13.9.1",
         "@types/react": "^16.9.23",
+        "@types/react-dev-utils": "^9.0.4",
         "@types/react-dom": "^16.9.5",
         "@types/react-loadable": "^5.5.3",
         "@types/react-redux": "^7.1.7",
@@ -70,26 +65,25 @@
         "@types/redux-logger": "^3.0.7",
         "@types/store": "^2.0.2",
         "@types/styled-components": "^5.0.1",
+        "@types/terser-webpack-plugin": "^2.2.0",
         "@types/uuid": "^7.0.2",
         "@types/webpack": "^4.41.8",
+        "@types/webpack-bundle-analyzer": "^2.13.3",
         "@types/webpack-dev-server": "^3.10.1",
+        "@types/webpack-hot-middleware": "^2.25.0",
         "@types/webpack-merge": "^4.1.5",
+        "@types/webpackbar": "^4.0.0",
         "@typescript-eslint/eslint-plugin": "^2.24.0",
         "@typescript-eslint/parser": "^2.24.0",
         "app-root-path": "2.1.0",
         "awesome-typescript-loader": "^5.2.1",
-        "babel-eslint": "10.0.1",
-        "babel-loader": "^8.0.5",
-        "babel-plugin-dynamic-import-node": "2.2.0",
-        "babel-plugin-styled-components": "^1.10.7",
         "browserslist": "^4.11.0",
-        "clean-webpack-plugin": "1.0.1",
+        "clean-webpack-plugin": "^3.0.0",
         "css-loader": "2.1.0",
         "detect-port-alt": "1.1.6",
         "dotenv": "^8.2.0",
         "dotenv-webpack": "^1.7.0",
         "eslint": "5.13.0",
-        "eslint-config-airbnb": "^18.1.0",
         "eslint-plugin-babel": "^5.3.0",
         "eslint-plugin-import": "^2.20.1",
         "eslint-plugin-react": "^7.19.0",
@@ -98,9 +92,7 @@
         "fontmin-webpack": "^2.0.6",
         "friendly-errors-webpack-plugin": "1.7.0",
         "html-webpack-plugin": "3.2.0",
-        "imagemin-mozjpeg": "8.0.0",
-        "imagemin-pngquant": "7.0.0",
-        "imagemin-svgo": "7.0.0",
+        "image-webpack-loader": "^6.0.0",
         "imagemin-webpack": "4.1.0",
         "lodash-webpack-plugin": "^0.11.5",
         "mini-css-extract-plugin": "0.5.0",
@@ -114,8 +106,10 @@
         "source-map-loader": "^0.2.4",
         "style-loader": "0.23.1",
         "ts-loader": "^6.2.1",
+        "ts-node": "^8.8.1",
         "typescript": "^3.8.3",
         "typescript-plugin-styled-components": "^1.4.4",
+        "typings-for-css-modules-loader": "^1.7.0",
         "webpack": "4.29.1",
         "webpack-bundle-analyzer": "3.3.2",
         "webpack-dev-server": "3.1.14",
