--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -13,7 +13,6 @@ parserOptions:
 env:
     browser: true
     node: true
-    jest: true
     es6: true
 
 globals:
@@ -42,26 +41,6 @@ settings:
 rules:
     # hooks
     react-hooks/rules-of-hooks: 2
-
-    # Jest
-    jest/consistent-test-it:
-        - 2
-        - fn: test
-    jest/lowercase-name: 2
-    jest/no-disabled-tests: 2
-    jest/no-focused-tests: 2
-    jest/no-identical-title: 2
-    jest/no-large-snapshots:
-        - 2
-        - maxSize: 10
-    jest/no-test-prefixes: 2
-    jest/no-jest-import: 2
-    jest/prefer-to-have-length: 2
-    jest/prefer-to-be-null: 2
-    jest/prefer-to-be-undefined: 2
-    jest/valid-describe: 2
-    jest/valid-expect: 2
-    jest/valid-expect-in-promise: 2
 
     # React core
     react/no-access-state-in-setstate: 2
@@ -168,10 +147,7 @@ rules:
     no-empty-character-class: 2
     no-ex-assign: 2
     no-extra-boolean-cast: 2
-    no-extra-parens:
-        - 2
-        - all
-        - ignoreJSX: all
+    no-extra-parens: 0
     no-extra-semi: 2
     no-func-assign: 2
     no-invalid-regexp: 2
