--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "frontend",
-    "version": "1.0.0",
+    "version": "2.0.0",
     "author": "Aleksander Konyk arziburst@gmail.com",
     "scripts": {
         "start": "cross-env-shell NODE_ENV=development ts-node -P \"./tsconfig.webpack.json\" \"./scripts/webpack/start\"",
@@ -38,6 +38,7 @@
         "react-tooltip": "^4.0.3",
         "redux": "^4.0.5",
         "redux-logger": "^3.0.6",
+        "redux-persist": "^6.0.0",
         "redux-saga": "^1.1.3",
         "store": "^2.0.12",
         "styled-components": "^5.0.0",
@@ -73,6 +74,7 @@
         "@types/webpack-hot-middleware": "^2.25.0",
         "@types/webpack-merge": "^4.1.5",
         "@types/webpackbar": "^4.0.0",
+        "@types/workbox-webpack-plugin": "^5.1.4",
         "@typescript-eslint/eslint-plugin": "^2.24.0",
         "@typescript-eslint/parser": "^2.24.0",
         "app-root-path": "2.1.0",
@@ -115,6 +117,7 @@
         "webpack-dev-server": "3.1.14",
         "webpack-hot-middleware": "2.24.3",
         "webpack-merge": "^4.2.2",
-        "webpackbar": "3.1.5"
+        "webpackbar": "3.1.5",
+        "workbox-webpack-plugin": "^5.1.3"
     }
 }
