--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
         ]
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.30",
+        "@fortawesome/free-solid-svg-icons": "^5.14.0",
+        "@fortawesome/react-fontawesome": "^0.1.11",
         "cross-env": "5.2.0",
         "i18next": "^19.1.0",
         "i18next-browser-languagedetector": "^4.0.1",
