--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
         "webpack-dev-server": "3.1.14",
         "webpack-hot-middleware": "2.24.3",
         "webpack-merge": "^4.2.2",
+        "webpack-pwa-manifest": "^4.2.0",
         "webpackbar": "3.1.5",
         "workbox-webpack-plugin": "^5.1.3"
     }
